--- a/src/styles/todo.scss
+++ b/src/styles/todo.scss
@@ -1,17 +1,4 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+@import "globals.scss";
 
 .todoApp {
     width: 70%;
