Changed header color

--- a/src/styles/todo.scss
+++ b/src/styles/todo.scss
@@ -10,7 +10,7 @@
 }
 
 .todoHeader {
-    background-color: rgb(164 164 164);
+    background-color: #009688;
     font-size: 30px;
     display: flex;
     align-items: center;
